# ChessMenthol

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release-extension.yml  release.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: copy-engine.mjs  copy-vision-assets.mjs  fetch-sidecar.mjs  prune-dist-engine.mjs  prune-dist-ort.mjs
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/scripts/: build-stockfish-android.sh
app/src-tauri/src/: engine.rs  lib.rs  mobile_engine.rs
app/src/components/: AccuracyDial.svelte  ActionBar.svelte  Board.svelte  BoardBadge.svelte  BoardControls.svelte  EditPanel.svelte  EngineHeader.svelte  EngineList.svelte  EngineOptions.svelte  EvalBar.svelte  EvalGraph.svelte  GameReportSummary.svelte  Header.svelte  HomePanel.svelte  Icon.svelte  Lines.svelte  MoveFeedback.svelte  MoveHistory.svelte  MoveStepper.svelte  Panel.svelte  RangeSlider.svelte  RegionOverlay.svelte  Titlebar.svelte  TurnToggle.svelte
app/src/core/: accuracy.ts  chess.ts  classify.ts  orchestrator.ts  pgn.ts  report.ts  serialize.ts
app/src/engine/: engine.ts  nativeEngine.ts  session.ts  types.ts  uci.ts  uciOptions.ts
app/src/lib/: arrows.ts  board.ts  capture.ts  edit.ts  engineClient.ts  engineOptions.ts  engineRegistry.ts  engineSchema.ts  evalbar.ts  glyphs.ts  image.ts  licon.ts  platform.ts  region.ts  types.ts
app/src/tests/: ActionBar.test.ts  App.test.ts  BoardControls.test.ts  EditPanel.test.ts  EngineList.test.ts  EngineOptions.test.ts  (+37 more)
apps/desktop/: .gitignore  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/extension/: .gitignore  package.json  vitest.config.ts  wxt.config.ts
chessmenthol/: cli.py  position.py
chessmenthol/analysis/: book.py  classify.py
chessmenthol/engine/: manager.py  spec.py  types.py
chessmenthol/models/: NOTICE.md  pieces.onnx
chessmenthol/server/: app.py  launcher.py  orchestrator.py  serialize.py  session.py  tracking.py
chessmenthol/vision/: __init__.py  capture.py  cli.py  detect.py  overlay.py  pieces.py  tracker.py  types.py
docs/: frontend-redesign-editorial-slate.html
extension/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/entrypoints/: background.ts  content.ts
extension/scripts/: copy-engine.mjs  copy-vision-assets.mjs
extension/src/: smoke.test.ts
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest-setup.ts
frontend/scripts/: copy-engine.mjs  copy-vision-assets.mjs  copy-vision-fixtures.mjs  prune-dist-ort.mjs
frontend/src/: App.svelte  app.css  stockfish.d.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
scripts/: convert_pieces_model.py  fetch_engines.py
tests/: conftest.py  position_grids.py  test_cli.py  test_fetch_engines.py  test_position.py
tests/analysis/: test_book.py  test_classify.py
tests/conversion/: test_convert.py
tests/engine/: test_manager.py  test_manager_stream.py  test_spec.py  test_types.py
tests/server/: test_app.py  test_launcher.py  test_orchestrator.py  test_serialize.py  test_session.py  test_tracking.py
tests/vision/: fakes.py  fixtures_gen.py  helpers.py  synthetic.py  test_capture.py  test_cli.py  test_detect.py  test_detect_real.py  test_detect_robustness.py  test_overlay.py  test_pieces.py  test_synthetic.py  test_tracker.py  test_types.py
(+335 files in other folders)
