[project]
name = "chessmenthol"
version = "0.1.0"
description = "Cross-platform desktop chess assistant (engine + vision)."
requires-python = ">=3.11"
dependencies = ["chess>=1.11", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
desktop = ["pywebview>=5"]

[project.scripts]
chessmenthol-analyze = "chessmenthol.cli:main"
chessmenthol-server = "chessmenthol.server.launcher:run_server"
chessmenthol-app = "chessmenthol.server.launcher:run_app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chessmenthol*"]

[tool.pytest.ini_options]
markers = ["engine: requires a real Stockfish binary"]
