[package]
name = "chessmenthol"
version = "0.2.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
xcap = "0.9"
# PNG decode for the Wayland screenshot-CLI fallback. Unifies with xcap's image
# 0.25; we only need the `png` feature added on top.
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
